--- a/css/style.css
+++ b/css/style.css
@@ -267,27 +267,72 @@ footer {
     padding-right: 50px;
   }
   .navbar {
-    display: none;
+    top: 0;
+    right: 0;
+    position: absolute;
+    display: grid;
+    gap: 12px;
+    padding: 42px 0;
+    margin: 0;
+    background: rgb(241, 84, 11);
+    list-style-type: none;
+    transform: translateX(0%);
+    transition: 0.3s;
+    width: 200px;
   }
   .active {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    padding-top: 100px;
+    transform: translateX(100%);
+  }
+  .navbar li {
+    display: block;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
   }
   #burger {
-    width: 40px;
     cursor: pointer;
-    height: 25px;
-    position: absolute;
-    right: 70px;
-    top: 65px;
-  }
-  #burger span {
-    background-color: white;
-    height: 5px;
     display: block;
-    margin: 5px;
+    position: absolute;
+    z-index: 1;
+    top: 10px;
+    right: 10px;
+    border: none;
+    background: transparent;
+    width: 40px;
+    height: 26px;
+  }
+  #burger::before,
+  #burger::after {
+    content: "";
+    left: 0;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 10px;
+    background: white;
+  }
+  #burger::before {
+    top: 0;
+    box-shadow: 0 11px 0 white;
+    transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+  }
+  #burger::after {
+    bottom: 0;
+    transition: bottom 0.3s 0.15s, transform 0.3s;
+  }
+  #burger.actively::before {
+    top: 11px;
+    transform: rotate(45deg);
+    box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+    transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+  }
+  #burger.actively::after {
+    bottom: 11px;
+    transform: rotate(-45deg);
+    transition: bottom 0.3s, transform 0.3s 0.15s;
   }
 }
 
